# cmake-archive-duplicate-names-test

./: CMakeLists.txt  README.md  a.c  b.c  flake.nix  test.c
